--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             font-family: 'Georgia', serif;
             margin: 0;
             padding: 0;
-            background-color: #fce4ec; /* Light Pink */
-            color: #4a148c; /* Deep Purple (for text) */
+            background-color: #fff8e1; /* Light cream */
+            color: #4e342e; /* Dark brown */
         }
         header {
-            background-color: #880e4f; /* Darker Pink/Magenta */
+            background-color: #bf360c; /* Deep red-orange */
             color: #ffffff;
             padding: 20px 0;
             text-align: center;
@@ -37,7 +37,7 @@
             margin-bottom: 40px;
             line-height: 1.6;
             font-size: 1.1em;
-            border-bottom: 2px solid #ce93d8; /* Light Lavender */
+            border-bottom: 2px solid #ffcc80; /* Light orange */
             padding-bottom: 20px;
         }
         .dance-section {
@@ -45,7 +45,7 @@
             align-items: center;
             margin-bottom: 40px;
             padding: 20px;
-            background-color: #f3e5f5; /* Lighter Lavender */
+            background-color: #fff3e0; /* Lighter cream */
             border-radius: 8px;
             box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
             transition: transform 0.3s ease;
@@ -55,7 +55,7 @@
         }
         .dance-section:nth-child(even) {
             flex-direction: row-reverse;
-            background-color: #e1bee7; /* Medium Lavender */
+            background-color: #ffe0b2; /* Pale orange */
         }
         .dance-section img {
             width: 250px;
@@ -63,27 +63,26 @@
             object-fit: cover;
             border-radius: 8px;
             margin: 0 30px;
-            border: 3px solid #ba68c8; /* Medium Purple */
+            border: 3px solid #ffab40; /* Orange */
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         }
         .dance-content {
             flex: 1;
         }
         .dance-content h2 {
-            color: #6a1b9a; /* Dark Purple */
+            color: #d84315; /* Darker red-orange */
             font-size: 1.8em;
             margin-top: 0;
-            border-bottom: 1px dashed #9575cd; /* Blue-Lavender */
+            border-bottom: 1px dashed #ffab40;
             padding-bottom: 5px;
         }
         .dance-content p {
             line-height: 1.5;
             margin-bottom: 15px;
-            color: #4a148c; /* Keep text dark purple for readability */
         }
         .explore-button {
             display: inline-block;
-            background-color: #42a5f5; /* Bright Blue */
+            background-color: #ff5722; /* Vibrant orange */
             color: #ffffff;
             padding: 10px 20px;
             text-decoration: none;
@@ -92,13 +91,13 @@
             font-weight: bold;
         }
         .explore-button:hover {
-            background-color: #2196f3; /* Slightly darker blue */
+            background-color: #e64a19; /* Slightly darker orange */
         }
         footer {
             text-align: center;
             padding: 20px;
             margin-top: 40px;
-            background-color: #880e4f; /* Darker Pink/Magenta */
+            background-color: #bf360c;
             color: #ffffff;
             font-size: 0.9em;
         }
