--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </section>
 
         <section class="dance-section">
-            <img src="images/bharatanatyam.jpg" alt="Bharatanatyam dance">
+            <img src="bharatanatyam.jpg" alt="Bharatanatyam dancer">
             <div class="dance-content">
                 <h2>Bharatanatyam</h2>
                 <p>Originating from Tamil Nadu, Bharatanatyam is known for intricate footwork and expressive hand gestures.</p>
@@ -124,7 +124,7 @@
         </section>
 
         <section class="dance-section">
-            <img src="images/kathak.jpg" alt="Kathak dance">
+            <img src="kathak.jpg" alt="Kathak dancer">
             <div class="dance-content">
                 <h2>Kathak</h2>
                 <p>Kathak from North India is known for pirouettes, rhythmic footwork, and storytelling through dance.</p>
@@ -133,7 +133,7 @@
         </section>
 
         <section class="dance-section">
-            <img src="images/kathakali.jpg" alt="Kathakali dance">
+            <img src="kathakali.jpg" alt="Kathakali dancer">
             <div class="dance-content">
                 <h2>Kathakali</h2>
                 <p>From Kerala, Kathakali is noted for its colorful makeup, elaborate costumes, and expressive storytelling.</p>
@@ -142,7 +142,7 @@
         </section>
 
         <section class="dance-section">
-            <img src="images/odissi.jpg" alt="Odissi dance">
+            <img src="odissi.jpg" alt="Odissi dancer">
             <div class="dance-content">
                 <h2>Odissi</h2>
                 <p>Odissi from Odisha is recognized by its lyrical grace, sculpturesque poses, and devotional themes.</p>
@@ -151,7 +151,7 @@
         </section>
 
         <section class="dance-section">
-            <img src="images/manipuri.jpg" alt="Manipuri dance">
+            <img src="manipuri.jpg" alt="Manipuri dancer">
             <div class="dance-content">
                 <h2>Manipuri</h2>
                 <p>Manipuri dance from Manipur features soft, flowing movements and themes of Radha-Krishna devotion.</p>
@@ -160,7 +160,7 @@
         </section>
 
         <section class="dance-section">
-            <img src="images/kuchipudi.jpg" alt="Kuchipudi dance">
+            <img src="kuchipudi.jpg" alt="Kuchipudi dancer">
             <div class="dance-content">
                 <h2>Kuchipudi</h2>
                 <p>From Andhra Pradesh, Kuchipudi blends fast footwork with dramatic expressions and musical narration.</p>
