--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PK2JX9N8');</script>
-<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traditional Dances of India</title>
+    <title>Traditional Dances of India | Explore India's Rich Dance Heritage</title>
+    <meta name="description" content="Discover the soulful rhythms and vibrant history of India's classical dance forms including Bharatanatyam, Kathak, Odissi, Kathakali, Manipuri, and Kuchipudi.">
+    <meta name="keywords" content="Indian classical dance, Bharatanatyam, Kathak, Odissi, Kathakali, Manipuri, Kuchipudi, Indian dance forms, cultural heritage, traditional dance India">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -71,10 +66,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </style>
 </head>
 <body class="antialiased">
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PK2JX9N8"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <div class="container">
         <!-- Header Section -->
         <header class="text-center py-8 md:py-12 bg-white rounded-xl shadow-lg mb-8">
